--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ input:checked + label {
       5、街道信访科：85128901
 	</p>
     <p>
-      6、物业项目经理王小涛：18268006078
+      6、物业项目经理李经理：18868707330
     </p>
   </section>
 
@@ -232,7 +232,7 @@ input:checked + label {
 		1、	一旦发现业主车辆被实施违法行为，建议受害业主第一时间环绕车辆360度第一时间拍摄视频、照片、录音录像。
 		</p>
 		<p> 
-		2、	通知物业经理王晓涛（电话：18268006078）保存案发时间段的录像证据。
+		2、	通知物业经理李经理（电话：18868707330）保存案发时间段的录像证据。
 		</p>
 		<p> 
 		3、通过微信电话通知本群群主如风，告知需要自助小组协助（通知内容包括但不限于：车辆现状、车辆地点、需要自助小组携带的工具）。
